Avoid NOTREACHED in content settings bubble.

BUG=626337

Review-Url: https://codereview.chromium.org/2130913002
Cr-Commit-Position: refs/heads/master@{#404538}

Former-commit-id: a9f6881d0c029d165b44a7893eab605f1b7bd046